@@ -4,29 +4,25 @@ import com.bestech.authentification_service.model.MyUser;
 import com.bestech.authentification_service.model.Role;
 import com.bestech.authentification_service.repository.RoleRepository;
 import com.bestech.authentification_service.repository.UserRepository;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Component
 @Slf4j
+@RequiredArgsConstructor
 public class DatabaseInitializer implements CommandLineRunner {
 
-    @Autowired
-    private RoleRepository roleRepository;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private BCryptPasswordEncoder passwordEncoder;
+    private final RoleRepository roleRepository;
+    private final UserRepository userRepository;
+    private final BCryptPasswordEncoder passwordEncoder;
 
     @Override
-    public void run(String... args) throws Exception {
+    public void run(String... args) {
         initializeRoles();
         initializeDefaultAdmin();
     }
@@ -38,28 +34,24 @@ public class DatabaseInitializer implements CommandLineRunner {
 
     private void createRoleIfAbsent(String roleName) {
         if (!roleRepository.existsByRole(roleName)) {
-            Role role = Role.builder()
-                    .role(roleName)
-                    .build();
-            roleRepository.save(role);
+            roleRepository.save(Role.builder().role(roleName).build());
             log.info("Rôle '{}' initialisé", roleName);
         }
     }
 
-    // Optionnel : Créer un admin par défaut
     private void initializeDefaultAdmin() {
         Role adminRole = roleRepository.findByRole("ADMIN");
 
-        if (adminRole != null && !userRepository.findByEmail("admin@example.com").isPresent()) {
+        if (adminRole != null && userRepository.findByEmail("admin@example.com").isEmpty()) {
             MyUser admin = new MyUser();
             admin.setUsername("admin");
             admin.setEmail("admin@example.com");
             admin.setPassword(passwordEncoder.encode("admin1234"));
             admin.setEnabled(true);
-            admin.setRoles(Arrays.asList(adminRole));
+            admin.setRoles(List.of(adminRole));
 
             userRepository.save(admin);
-            log.info("Compte admin par défaut créé - email: admin@example.com, mot de passe: Admin123!");
+            log.info("Compte admin par défaut créé — email: admin@example.com");
         }
     }
 }
